[gd_scene load_steps=10 format=3 uid="uid://ces80e2ev3flu"]

[ext_resource type="Script" path="res://Scripts/ObjectScripts/AttackMele.gd" id="1_7wlle"]
[ext_resource type="SpriteFrames" uid="uid://corrgoc2jthw7" path="res://Objects/StaticObjects/AttackMeleAnimations.tres" id="2_6v6ej"]
[ext_resource type="SpriteFrames" uid="uid://cvq50hlm1hhwg" path="res://Objects/StaticObjects/SpearAnimation.tres" id="3_38w03"]
[ext_resource type="AudioStream" uid="uid://my48ww17lxuh" path="res://Assets/Audio/SFX/SwordHit.wav" id="4_72sbq"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lox5g"]
size = Vector2(24, 49)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_svidt"]
size = Vector2(50, 44)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w3ftl"]
size = Vector2(44, 52)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hpd5w"]
size = Vector2(26, 42)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_bmu3c"]
polygon = PackedVector2Array(-4, 35, 4, 35, 4, 34, 6, 34, 6, 33, 7, 33, 7, 32, 8, 32, 8, 31, 9, 31, 9, 30, 10, 30, 10, 28, 11, 28, 11, 20, 10, 20, 10, 18, 9, 18, 9, 17, 8, 17, 8, 16, 7, 16, 7, 15, 6, 15, 6, 14, 4, 14, 4, 13, 2, 13, 2, 12, 3, 12, 3, 11, 5, 11, 5, 10, 8, 10, 8, 7, 6, 7, 6, 6, 7, 6, 7, 4, 6, 4, 6, 3, 7, 3, 7, 2, 6, 2, 6, 1, 7, 1, 7, -1, 8, -1, 8, -7, 6, -7, 6, -8, 4, -8, 4, -12, -4, -12, -4, -8, -6, -8, -6, -7, -8, -7, -8, -1, -7, -1, -7, 1, -6, 1, -6, 2, -7, 2, -7, 3, -6, 3, -6, 4, -7, 4, -7, 6, -6, 6, -6, 7, -8, 7, -8, 10, -5, 10, -5, 11, -3, 11, -3, 12, -2, 12, -2, 13, -4, 13, -4, 14, -6, 14, -6, 15, -7, 15, -7, 16, -8, 16, -8, 17, -9, 17, -9, 18, -10, 18, -10, 20, -11, 20, -11, 28, -10, 28, -10, 30, -9, 30, -9, 31, -8, 31, -8, 32, -7, 32, -7, 33, -6, 33, -6, 34, -4, 34)

[node name="AttackMele" type="CharacterBody2D"]
z_index = 1
platform_on_leave = 2
script = ExtResource("1_7wlle")

[node name="Sprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(1, 9)
sprite_frames = ExtResource("2_6v6ej")
autoplay = "default"
frame_progress = 0.827694

[node name="SpearAnimation" type="AnimatedSprite2D" parent="."]
position = Vector2(1, 4)
sprite_frames = ExtResource("3_38w03")
animation = &"Walking"
autoplay = "Walking"

[node name="Collision" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, 10.5)
shape = SubResource("RectangleShape2D_lox5g")

[node name="RayCastLeft" type="RayCast2D" parent="."]
position = Vector2(0, 21)
target_position = Vector2(-40, 0)

[node name="RayCastRight" type="RayCast2D" parent="."]
position = Vector2(0, 21)
target_position = Vector2(40, 0)

[node name="RayCastLeftTop" type="RayCast2D" parent="."]
position = Vector2(0, -21)
target_position = Vector2(-70, 0)

[node name="RayCastRightTop" type="RayCast2D" parent="."]
position = Vector2(0, -21)
target_position = Vector2(70, 0)

[node name="RayCastDown" type="RayCast2D" parent="."]
position = Vector2(0, 21)
target_position = Vector2(0, 30)

[node name="JumpHurtBox" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="JumpHurtBox"]
position = Vector2(-2, 13)
shape = SubResource("RectangleShape2D_svidt")

[node name="HurtBox" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(-1, 9)
shape = SubResource("RectangleShape2D_w3ftl")

[node name="SpikeHurtBox" type="Area2D" parent="."]
visible = false
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpikeHurtBox"]
position = Vector2(0, 14)
shape = SubResource("RectangleShape2D_hpd5w")

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="AttackStopTimer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[node name="AttackResetTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="SwitchHurtboxEnabledTimer" type="Timer" parent="."]
wait_time = 10000.0
autostart = true

[node name="SwordHit" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_72sbq")
volume_db = 7.0
pitch_scale = 0.6
bus = &"SFX"

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource("OccluderPolygon2D_bmu3c")

[connection signal="animation_finished" from="SpearAnimation" to="." method="_on_spear_animation_animation_finished"]
[connection signal="area_entered" from="JumpHurtBox" to="." method="_on_jump_hurt_box_area_entered"]
[connection signal="area_entered" from="HurtBox" to="." method="_on_hurt_box_area_entered"]
[connection signal="body_entered" from="SpikeHurtBox" to="." method="_on_spike_hurt_box_body_entered"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
[connection signal="timeout" from="AttackStopTimer" to="." method="_on_attack_stop_timer_timeout"]
[connection signal="timeout" from="AttackResetTimer" to="." method="_on_attack_reset_timer_timeout"]
[connection signal="timeout" from="SwitchHurtboxEnabledTimer" to="." method="_on_switch_hurtbox_enabled_timer_timeout"]
